Starting to rework scoring based on correctness
